Fix styling of the lock button in dark mode

--- a/display/shared/styling/themes/dark-theme.less
+++ b/display/shared/styling/themes/dark-theme.less
@@ -108,9 +108,14 @@
       color: #ffffff;
     }
 
+    .sheet-tabs .lock-btn,
     .sheet-tabs > [data-tab] .navicon {
       background-color: var(--system-dark-color-1);
       border: 1px solid var(--system-dark-color-4);
+    }
+
+    .lock-btn:hover {
+      color: #ffffff;
     }
 
     .sheet-tabs > [data-tab].active .navicon {
